# memory-bank-mcp

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COST_TRACKING_README.md  IMPLEMENTATION_SUMMARY.md  LICENSE  OPENSOURCE_TRANSFORMATION.md  README.md  README_CLI_Integration.md  SECURITY.md  build_memory_bank.sh  cost_demo.py  memory_bank_builder_writer.py  pc_cortex  pyproject.toml  research_engine_main_task.md  start_dashboard.sh  system_prompt.md  task_d_realtime_backend.md  task_e_frontend_dashboard.md  task_f_validation_analytics.md  test_full_multi_agent.py  test_phase2_components.py  test_pytorch_architecture.py  update_memory_bank.py  update_memory_bank.sh  verify_cost_integration.py
backend/: .gitignore  main.py  pyproject.toml  test_integration.py
backend/app/adapters/: filesystem.py
backend/app/api/: routes.py
backend/app/models/: memory_bank.py
backend/app/services/: backward_compat.py  build_job_service.py  (+3 more)
mem_builder/: .env.example  .gitignore  demo.py  main.py  mem.pem  pyproject.toml  test_turbopuffer_ops.py  upload_to_turbopuffer.py
mem_builder/lib/: config.py  consts.py  download_manager.py  git_utils.py  github_auth.py  logger.py  repo_manager.py  sandbox_manager.py  turbopuffer_manager.py
mem_builder/test_membank/: generation_summary.json  graph.json
memory_bank_core/: README.md  __init__.py  __main__.py  main.py  pyproject.toml
memory_bank_core/agents/: __init__.py  architecture_agent.py  orchestration_agent.py
memory_bank_core/builders/: core_builder.py  multi_agent_builder.py
memory_bank_core/exceptions/: build.py  storage.py  validation.py
memory_bank_core/integrations/: __init__.py  legacy.py
memory_bank_core/interfaces/: __init__.py  builder.py  filesystem.py  storage.py
memory_bank_core/memory_bank_core/: main.py
memory_bank_core/models/: build_job.py
memory_bank_core/services/: job_manager.py
memory_bank_core/storage/: filesystem_operations.py
memory_bank_core/tasks/: multi_agent_implementation.md
memory_bank_core/tests/: test_architecture_agent.py
memory_bank_core/utils/: cost_calculator.py
(+65 files in other folders)
