[project]
name = "memory-bank-dashboard"
version = "0.1.0"
description = "Observability dashboard for memory banks"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "python-multipart",
    "python-markdown",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = [
    "pytest",
    "pytest-asyncio",
    "httpx",
]
