[project]
name = "memory-bank-dashboard"
version = "0.1.0"
description = "Observability dashboard for memory banks"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "python-multipart",
    "python-markdown",
    "claude-code-sdk>=0.0.14",
    "memory-bank-core",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = [
    "pytest",
    "pytest-asyncio",
    "httpx",
]

[tool.uv.sources]
memory-bank-core = { path = "../memory_bank_core" }
