[project]
name = "membank"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "daytona>=0.24.1",
    "python-dotenv>=1.0.0",
    "pyjwt[crypto]>=2.8.0",
    "requests>=2.31.0",
    "turbopuffer>=0.5.13",
    "openai>=1.97.0",
    "tiktoken>=0.9.0",
    "click>=8.2.1",
]

[dependency-groups]
dev = [
    "graphviz>=0.21",
]
