[project]
name = "memory-bank-core"
version = "1.0.0"
description = "Core memory bank building logic extracted from PC Cortex"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0.0",
    "aiofiles>=22.0.0",
    "claude-code-sdk>=0.0.14",
    "click>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["memory_bank_core"]

[project.scripts]
memory-bank = "memory_bank_core.main:cli"
